# Dynam

./: .gitignore  .replit  AUDIT.md  CLAUDE_ACTION_PLAN.md  CMakeLists.txt  DEPENDENCIES.md  LICENSE  MIMICRY_UNWRAP_PATCH.txt  PATCHES.md  README.md  README_ECH.md  SETUP.md  build.bat  conanfile.txt  crypto_test.txt  fix_bfe.bat  fix_windivert.bat  git_full_push.py  install.bat  install.sh  network_test.txt  r10.md  r11.md  r12.md  r13.md  r14.md  r15.md  r16.md  r8_src_review.md  r9_independent_review.md  replit.md  run_ncp.bat  run_tests.bat
.ccls-cache/@@home@runner@workspace/: @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm-generic@errno-base.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm-generic@errno.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm@errno.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@linux@close_range.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@linux@errno.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@alloca.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@byteswap.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@confname.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@cpu-set.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@endian.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@endianness.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@environments.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@errno.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@floatn-common.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@floatn.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@flt-eval-method.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@fp-fast.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@fp-logb.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@getopt_core.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@getopt_posix.h.blob  @nix@store@dj43clc5ff7jjnfmhbaj6q4q0h8kpfpm-glibc-2.40-66-dev@include@bits@iscanonical.h.blob  (+313 more)
attached_assets/: Pasted--Build-files-have-been-written-to-home-runner-workspace_1770797915118.txt
docs/: ADR_R11_R12_R13_FIXES.md  ARCHITECTURE.md  BUILD.md  CLI_COMMANDS.md  DPI_ADVANCED_GUIDE.md  Doxyfile.in  KNOWN_ISSUES.md  MASTER_ORCHESTRATOR_ROADMAP.md  SECURITY_FIXES.md  SECURITY_IMPLEMENTATION_GUIDE.md  USER_GUIDE.md
examples/: dpi_advanced_example.cpp  ech_cache_example.cpp  ech_example.cpp
scripts/: build_and_run.bat  build_vcpkg.bat  create_installer.sh
src/: Appinitialized_ =lication.cpp  Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  main.cpp  ncp.manifest
src/core/: CMakeLists.txt  ConnectionMonitor.cpp  ConnectionMonitor.hpp  InterfaceSelector.cpp  InterfaceSelector.hpp  NetworkManager.cpp  NetworkManager.hpp
src/core/include/: ncp_adversarial.hpp  ncp_adversary_tester.hpp  ncp_arp.hpp  ncp_behavioral_cloak.hpp  ncp_burst_morpher.hpp  ncp_capabilities.hpp  ncp_config.hpp  ncp_covert_channel.hpp  ncp_cross_layer_correlator.hpp  ncp_crypto.hpp  ncp_crypto_constants.hpp  ncp_csprng.hpp  ncp_db.hpp  ncp_dns_covert.hpp  ncp_dns_leak_prevention.hpp  ncp_doh.hpp  ncp_dpi.hpp  ncp_dpi_advanced.hpp  ncp_dpi_zapret.hpp  ncp_dummy.hpp  ncp_e2e.hpp  ncp_e2e_caps_patch.hpp  ncp_ech.hpp  ncp_ech_cache.hpp  ncp_ech_fetch.hpp  ncp_ech_retry.hpp  ncp_entropy_masking.hpp  ncp_flow_shaper.hpp  ncp_geneva_engine.hpp  ncp_geneva_ga.hpp  ncp_hls_steg.hpp  ncp_http_steg.hpp  ncp_i2p.hpp  ncp_identity.hpp  ncp_l2_stealth.hpp  ncp_l3_stealth.hpp  ncp_license.hpp  ncp_logger.hpp  ncp_mimicry.hpp  ncp_network.hpp  (+27 more)
src/core/src/: crypto.cpp  db.cpp  dhcp_spoofer.cpp  doh.cpp  dpi_advanced.cpp  e2e.cpp  i2p.cpp  license.cpp  mimicry.cpp  ncp_adversarial.cpp  ncp_adversary_tester.cpp  ncp_arp.cpp  ncp_behavioral_cloak.cpp  ncp_burst_morpher.cpp  ncp_covert_channel.cpp  ncp_cross_layer_correlator.cpp  ncp_dhcp_spoofer.hpp  ncp_dns_covert.cpp  ncp_dns_leak_prevention.cpp  ncp_dpi.cpp  ncp_dpi_zapret.cpp  ncp_dummy.cpp  ncp_ech.cpp  ncp_ech_cache.cpp  ncp_ech_fetch.cpp  ncp_ech_retry.cpp  ncp_entropy_masking.cpp  ncp_flow_shaper.cpp  ncp_geneva_engine.cpp  ncp_geneva_ga.cpp  ncp_hls_steg.cpp  ncp_http_steg.cpp  ncp_identity.cpp  ncp_l2_stealth.cpp  ncp_l3_stealth.cpp  ncp_mimicry.cpp  ncp_orchestrator.cpp  ncp_packet_interceptor.cpp  ncp_packet_pipeline.cpp  ncp_paranoid.cpp  (+23 more)
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
tests/: CMakeLists.txt  crypto_test.cpp  test_advanced_dpi.cpp  test_adversarial.cpp  test_burst_morpher.cpp  test_critical_fixes.cpp  test_crypto.cpp  test_csprng.cpp  test_db.cpp  test_doh.cpp  test_dpi.cpp  test_dpi_advanced_integration.cpp  test_e2e.cpp  test_e2e_extended.cpp  test_ech.cpp  test_ech_cache.cpp  test_ech_pipeline.cpp  test_flow_shaper.cpp  test_geneva.cpp  test_i2p.cpp  test_integration.cpp  test_l3_l2_stealth.cpp  test_l3_stealth.cpp  test_license.cpp  test_mimicry_roundtrip.cpp  test_network.cpp  test_orchestrator.cpp  test_packet_interceptor.cpp  test_paranoid.cpp  test_port_knock.cpp  test_probe_resist.cpp  test_protocol_morph.cpp  test_r13_fixes.cpp  test_secure_memory.cpp  test_security_classes.cpp  test_spoofer.cpp  test_thread_safety.cpp
tests/fuzz/: CMakeLists.txt  fuzz_crypto.cpp  fuzz_dpi_config.cpp  fuzz_packet_parser.cpp
tests/integration/: CMakeLists.txt  test_dpi_fixes.cpp
tests/scripts/: compare_clienthello.sh
web/: ncp_license.py  requirements.txt  server.py
(+24 files in other folders)
